# planters

./: .gitignore  Box.cpp  Box.h  BoxList.cpp  BoxList.h  BoxTree.cpp  BoxTree.h  CMakeLists.txt  Makefile  PlanterMgr.cpp  PlanterMgr.h  o.txt  out.txt  plantermgr.cpp  plantermgr.h  planters  planters.cpp  rubric.txt  testbox.cpp  testboxtree.cpp
include/: BoxList.h  BoxTree.h  plantermgr.h
src/: Box.cpp  BoxList.cpp  BoxTree.cpp  Makefile  plantermgr.cpp  planters  planters.cpp
tests/: CMakeLists.txt  Makefile  box_tests.cpp  boxlist_tests.cpp  boxtree_tests.cpp  performance_tests.cpp  plantermgr_tests.cpp  tests
tests/tests.dSYM/Contents/Resources/DWARF/: tests
